--- a/13154e32980e9f216f7108dc3aff6feea3403a93/header.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/header.html
@@ -1,2 +1,2 @@
 <h1>Becca Myers</h1>
-<img src="images/becca.JPG" srcset="images/becca-s.jpg 300w, images/becca-m.jpg 600w, images/becca.jpg 1000w" alt="Becca">
+<img src="/images/becca.JPG" srcset="/images/becca-s.jpg 300w, /images/becca-m.jpg 600w, /images/becca.jpg 1000w" alt="Becca">
