--- a/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/nav.css">
-    <link rel="stylesheet" href="/styles/footer.css">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/index.css">
+    <link rel="stylesheet" href="/beccamyers.github.io/styles/nav.css">
+    <link rel="stylesheet" href="/beccamyers.github.io/styles/footer.css">
+    <link rel="stylesheet" href="/beccamyers.github.io/styles/header.css">
+    <link rel="stylesheet" href="/beccamyers.github.io/styles/index.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     <title>Becca Maisey | Home</title>
 </head>
@@ -21,9 +21,9 @@
     </main>
 <footer w3-include-html="/footer.html"></footer>
 </body>
-    <script src="/scripts/currentdate.js"></script>
-    <script src="/scripts/hamburger.js"></script>
-    <script src="/scripts/w3.js"></script>
-    <script src="/scripts/wayfinding.js"></script>
-    <script src="/scripts/modularize.js"></script>
+    <script src="/beccamyers.github.io/scripts/currentdate.js"></script>
+    <script src="/beccamyers.github.io/scripts/hamburger.js"></script>
+    <script src="/beccamyers.github.io/scripts/w3.js"></script>
+    <script src="/beccamyers.github.io/scripts/wayfinding.js"></script>
+    <script src="/beccamyers.github.io/scripts/modularize.js"></script>
 </html>
