--- a/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
@@ -11,15 +11,15 @@
     <title>Becca Maisey | Home</title>
 </head>
 <body>
-    <nav w3-include-html="/beccamyers.github.io/nav.html"></nav>
-    <header w3-include-html="/beccamyers.github.io/header.html"></header>
+    <nav w3-include-html="/beccamyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/nav.html"></nav>
+    <header w3-include-html="/beccamyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/header.html"></header>
     <main>
         <h2>About Me</h2>
         <p>insert bio here</p>
         <h2>Philosophy of Education</h2>
         <p>insert philosophy here</p>
     </main>
-    <footer w3-include-html="/beccamyers.github.io/footer.html"></footer>
+    <footer w3-include-html="/beccamyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
 </body>
     <script src="/beccamyers.github.io/scripts/currentdate.js"></script>
     <script src="/beccamyers.github.io/scripts/hamburger.js"></script>
