--- a/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/beccamyers.github.io/styles/nav.css">
-    <link rel="stylesheet" href="/beccamyers.github.io/styles/footer.css">
-    <link rel="stylesheet" href="/beccamyers.github.io/styles/header.css">
-    <link rel="stylesheet" href="/beccamyers.github.io/styles/index.css">
+    <link rel="stylesheet" href="/beccammyers.github.io/styles/nav.css">
+    <link rel="stylesheet" href="/beccammyers.github.io/styles/footer.css">
+    <link rel="stylesheet" href="/beccammyers.github.io/styles/header.css">
+    <link rel="stylesheet" href="/beccammyers.github.io/styles/index.css">
     <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     <title>Becca Maisey | Home</title>
 </head>
 <body>
-    <nav w3-include-html="/beccamyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/nav.html"></nav>
-    <header w3-include-html="/beccamyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/header.html"></header>
+    <nav w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/nav.html"></nav>
+    <header w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/header.html"></header>
     <main>
         <h2>About Me</h2>
         <p>insert bio here</p>
         <h2>Philosophy of Education</h2>
         <p>insert philosophy here</p>
     </main>
-    <footer w3-include-html="/beccamyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
+    <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
 </body>
-    <script src="/beccamyers.github.io/scripts/currentdate.js"></script>
-    <script src="/beccamyers.github.io/scripts/hamburger.js"></script>
-    <script src="/beccamyers.github.io/scripts/w3.js"></script>
-    <script src="/beccamyers.github.io/scripts/wayfinding.js"></script>
-    <script src="/beccamyers.github.io/scripts/modularize.js"></script>
+    <script src="/beccammyers.github.io/myers.github.io/scripts/currentdate.js"></script>
+    <script src="/beccammyers.github.io/scripts/hamburger.js"></script>
+    <script src="/beccammyers.github.io/scripts/w3.js"></script>
+    <script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
+    <script src="/beccammyers.github.io/scripts/modularize.js"></script>
 </html>
