--- a/13154e32980e9f216f7108dc3aff6feea3403a93/header.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/header.html
@@ -1,2 +1,2 @@
 <h1>Becca Myers</h1>
-<img src="/beccamyers.github.io/images/becca.JPG" srcset="/beccamyers.github.io/images/becca-s.jpg 300w, /beccamyers.github.io/images/becca-m.jpg 600w, /beccamyers.github.io/images/becca.jpg 1000w" alt="Becca">
+<img src="/beccammyers.github.io/images/becca.JPG" srcset="/beccammyers.github.io/images/becca-s.jpg 300w, /beccammyers.github.io/images/becca-m.jpg 600w, /beccammyers.github.io/images/becca.jpg 1000w" alt="Becca">
