--- a/13154e32980e9f216f7108dc3aff6feea3403a93/nav.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/nav.html
@@ -1,6 +1,6 @@
 <button class="icon" onclick="myFunction()">&#9776;</button>
 <ul id="topnav" class="responsive">
-    <li class="active"><a href="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/index.html">Home</a></li>
+    <li class="active"><a href="https://beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/index.html">Home</a></li>
     <li><a href="">Preparation &amp; Planning</a></li>
     <li><a href="">Classroom Environment</a></li>
     <li><a href="">Instruction</a></li>
