--- a/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
@@ -19,6 +19,7 @@
         </div>
         <h2 class="about">About Me</h2>
         <p class="about">My name is Rebecca Myers.  I am currently a student at Brigham Young University-Idaho studying Early Childhood/Special Education.  I have had a passion for working with young children since I started babysitting as a young teacher and as I taught swimming lessons.  The joy that comes from working with young children followed me through to my first time teaching in a first-grade elementary class.  As I’ve taken classes and had opportunities to work with children, my educational philosophy grown and developed.  I have discovered that students learn best when the activities and lessons are tailored to the individual and are developmentally appropriate for their age.  I’m excited to design a learning environment where children participate in hands-on activities and are excited to learn.</p>
+        <embed src="./files/recipes.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
 </body>
