--- a/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
@@ -41,7 +41,7 @@
            </div>
 
                    <div class="grid-item">
-                       <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                       <embed src="./files/Lesson%203%20Part%20One.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
                    </div>
                    <!--             Toddler Lesson plan #3 Spring 2018 -->
 
@@ -51,7 +51,7 @@
                 <p class="about">Teachers don’t teach content in the abstract; they teach it to students. In order to ensure student learning, teachers must know not only their content and its related pedagogy but also the students to whom they wish to teach that content.  While there are patterns in cognitive, social, and emotional developmental stages typical of different age groups, students learn in their individual ways and may have gaps or misconceptions the teacher needs to uncover in order to plan appropriate learning activities. In addition, students have lives beyond school—lives that include athletic and musical pursuits, activities in their neighborhoods, and family and cultural traditions. Students whose first language is not English, as well as students with other special needs, must be considered when a teacher is planning lessons and identifying resources to ensure that all students will be able to learn.</p></div>
             <div class="grid-container">
                 <div class="grid-item">
-                    <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <embed src="./files/Student%20Interests.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
                 </div>
 
                 <div class="grid-item">
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="grid-item">
-                    <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <embed src="./files/Lesson%202%20Part%20Two.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
                 </div>
 
             </div>
@@ -74,7 +74,7 @@
                 <p class="about">Teaching is a purposeful activity; even the most imaginative activities are directed toward certain desired learning. Therefore, establishing instructional outcomes entails identifying exactly what students will be expected to learn; the outcomes describe not what students will do, but what they will learn. The instructional outcomes should reflect important learning and must lend themselves to various forms of assessment through which all students will be able to demonstrate their understanding of the content. Learning outcomes may be of a number of different types: factual and procedural knowledge, conceptual understanding, thinking and reasoning skills, and collaborative and communication strategies. In addition, some learning outcomes refer to dispositions; it’s important not only that students learn to read but also, educators hope, that they will like to read. In addition, experienced teachers are able to link their learning outcomes with outcomes both within their discipline and in other disciplines.</p></div>
             <div class="grid-container">
                 <div class="grid-item">
-                    <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <embed src="./files/Lesson%20Plan%209%20Mixed%20Word%20Problems.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
                 </div>
 
                 <div class="grid-item">
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="grid-item">
-                    <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <embed src="./files/Lesson%20Plan%201%20-%20Counting%20by%207's.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
                 </div>
 
             </div>
