--- a/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
@@ -1,6 +1,6 @@
 
 <!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-
+<embed src="./files/" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 -->
 
 
