--- a/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/index.html
@@ -1,4 +1,3 @@
-
 <!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
 <embed src="./files/recipes.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 -->
@@ -7,6 +6,7 @@
 
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,21 +17,32 @@
     <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     <title>Becca Maisey | Home</title>
 </head>
+
 <body>
     <header w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/header.html"></header>
     <nav w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/nav.html"></nav>
     <main>
-       <div id="me">
-        <img src="/beccammyers.github.io/images/becca.JPG" srcset="/beccammyers.github.io/images/becca-s.jpg 300w, /beccammyers.github.io/images/becca-m.jpg 600w, /beccammyers.github.io/images/becca.jpg 1000w" alt="Becca">
+        <div id="me">
+            <img src="/beccammyers.github.io/images/becca.JPG"
+                srcset="/beccammyers.github.io/images/becca-s.jpg 300w, /beccammyers.github.io/images/becca-m.jpg 600w, /beccammyers.github.io/images/becca.jpg 1000w"
+                alt="Becca">
         </div>
         <h2 class="about">About Me</h2>
-        <p class="about">My name is Rebecca Myers, and I am currently a student at Brigham Young University-Idaho studying Early Childhood/Special Education.  I have had a passion for working with young children since I started babysitting as a young teenager and as I taught swimming lessons.  The joy that comes from working with young children followed me through to my first time teaching in a first-grade elementary class.  As I’ve taken classes and had opportunities to work with children, my educational philosophy has grown and developed.  I have discovered that students learn best when the activities and lessons are tailored to the individual and are developmentally appropriate for their age.  I’m excited to design a learning environment where children participate in hands-on activities and are eager to participate and learn.</p>
+        <p class="about">My name is Rebecca Myers, and I am currently a student at Brigham Young University-Idaho
+            studying Early Childhood/Special Education. I have had a passion for working with young children since I
+            started babysitting as a young teenager and as I taught swimming lessons. The joy that comes from working
+            with young children followed me through to my first time teaching in a first-grade elementary class. As I’ve
+            taken classes and had opportunities to work with children, my educational philosophy has grown and
+            developed. I have discovered that students learn best when the activities and lessons are tailored to the
+            individual and are developmentally appropriate for their age. I’m excited to design a learning environment
+            where children participate in hands-on activities and are eager to participate and learn.</p>
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
 </body>
-    <script src="/beccammyers.github.io/myers.github.io/scripts/currentdate.js"></script>
-    <script src="/beccammyers.github.io/scripts/hamburger.js"></script>
-    <script src="/beccammyers.github.io/scripts/w3.js"></script>
-    <script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
-    <script src="/beccammyers.github.io/scripts/modularize.js"></script>
+<script src="/beccammyers.github.io/myers.github.io/scripts/currentdate.js"></script>
+<script src="/beccammyers.github.io/scripts/hamburger.js"></script>
+<script src="/beccammyers.github.io/scripts/w3.js"></script>
+<script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
+<script src="/beccammyers.github.io/scripts/modularize.js"></script>
+
 </html>
