--- a/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
@@ -167,7 +167,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <embed src="./files/Lesson%201%20Part%20One.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
             <div class="grid-item">
@@ -188,7 +188,7 @@
             </div>
 
             <div class="grid-item">
-                <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <embed src="./files/Lesson%20Plan%206%20Shades%20of%20Meaning.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
         </div>
@@ -211,7 +211,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <embed src="./files/Unit%20Lesson%20Plan%201.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
             <div class="grid-item">
@@ -234,7 +234,7 @@
             </div>
 
             <div class="grid-item">
-                <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <embed src="./files/CHILD%20230%20Lesson%20Plan.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
         </div>
@@ -254,8 +254,10 @@
                 progress toward understanding the learning outcomes.</p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
-                <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+            <div class="grid-item images">
+                <img src="./images/Pre-Assessment%20key.jpeg" alt="Pre Assessment Key">
+                <img src="./images/Pre-assessment%20graph.png" alt="Pre Assessment Graph">
+                <img src="./images/Pre-Assessment%20Reflection.png" alt="Pre Assessment Reflection">
             </div>
 
             <div class="grid-item">
@@ -264,7 +266,7 @@
                     graphs with results from the written assessment and my reflection on the experience. My partner and
                     I used the information from the worksheet as well as what we observed to plan our lessons. This
                     document shows that I am capable of creating and analyzing assessments in order to better understand
-                    what my students know and what I need to reteach.</p>
+                    what my students know and what I need to teach.</p>
             </div>
 
 
@@ -278,7 +280,7 @@
             </div>
 
             <div class="grid-item">
-                <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <embed src="./files/Unit%20Pre-Assessment%20Report.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
         </div>
