--- a/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
@@ -1,5 +1,5 @@
 <!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-
+                <embed src="" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 -->
 <!DOCTYPE html>
 <html lang="en-us">
@@ -34,7 +34,8 @@
                 distinguished from students complying with standards of conduct and behavior.</p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                    <img src="" alt="Emotions">
             </div>
 
             <div class="grid-item">
@@ -57,6 +58,7 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/STET%20Chapter%204%20Handout.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
@@ -79,6 +81,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
+                    <embed src="./files/Preschool%20Lesson%20Plan%2017.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
             <div class="grid-item">
@@ -103,7 +106,9 @@
                 students to employ them, may be inferred from the sense that the class “runs itself.”</p>
         </div>
         <div class="grid-container">
+
             <div class="grid-item">
+                    <embed src="./files/Professional%20Growth%20Goal%201.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
             <div class="grid-item">
@@ -129,6 +134,8 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/Becca%20Maisey%20Second%20Toddler%20Lead%20Implementation%20Rubric.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                    <embed src="./files/Becca%20Maisey%20Third%20Toddler%20Lead%20Implementation%20Rubric.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
@@ -142,7 +149,8 @@
                 as an end in itself, but as a prerequisite to high levels of engagement in content.</p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                    <img src="" alt="Sensory Bin">
             </div>
 
             <div class="grid-item">
@@ -170,6 +178,7 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/Wong%206-10.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
@@ -184,7 +193,8 @@
                 electronics and other technology.</p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                    <img src="" alt="Lab Setup">
             </div>
 
             <div class="grid-item">
@@ -204,6 +214,7 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/Environment%20Observation%20Form%20One%20Fill-in.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
