--- a/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
@@ -25,7 +25,7 @@
 
         <h1>Health and Safety</h1>
         <div>
-            <h2 class="about"></h2>
+            <h2 class="about">5a. Accesses, Uses, and Maintains Health and Safety Records</h2>
             <p class="about"></p>
         </div>
         <div class="grid-container">
@@ -42,6 +42,158 @@
             </div>
 
             <div class="grid-item">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">5b. Responsive to Policy and Procedures to Prevent & Respond to Health, Safety, &
+                Nutrition</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">5c. Training and Collaboration of Staff</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">5d. Connects Families with Community Resources</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+                    <embed src="./files/Resource%20Plan.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">5e. Individualized and Group Nutritional, Physical, and Medical Needs</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item images">
+                <img src="./images/Epipen.jpg" alt="Epi Pen">
+                <p><strong>Photo Credit: </strong>EpiPen auto-injection epinephrine pens manufactured by Mylan NV pharmaceutical company for use by severe allergy sufferers are seen in Washington, U.S. August 24, 2016. REUTERS/Jim Bourg/File Photo</p>
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">5f. Medical & Other Conditions, Special Needs</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">5g. Emergency Procedures, Abuse Prevention and Reporting</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">5h. Infectious/Communicable Disease</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item images">
+                <img src="./images/Black%20Cloth.jpg" alt="Black Cloth">
             </div>
         </div>
 
