--- a/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
@@ -37,8 +37,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                <embed src="./files/DAP%20Principles%20Paper.pdf" alt="pdf"
-                    pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+                <embed src="./files/DAP%20Principles%20Paper.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
             <div class="grid-item">
