--- a/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
@@ -41,6 +41,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
+                    <embed src="./files/Week%209%20Reflection.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
             <div class="grid-item">
@@ -63,6 +64,7 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/Journal%206.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
@@ -80,7 +82,8 @@
                 include anecdotal notes that are kept in student folders.</p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="" alt="Child Web">
             </div>
 
             <div class="grid-item">
@@ -102,6 +105,7 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/Toddler%20Notes%20Week%207.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
@@ -118,7 +122,8 @@
                 the teacher’s essential caring, valued by families of students of all ages.</p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="" alt="Relationships Graph">
             </div>
 
             <div class="grid-item">
@@ -139,6 +144,7 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/Parent%20Handout%20Lesson%201.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
@@ -158,6 +164,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
+                    <embed src="./files/Tomlison%20Chapter%204.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
             <div class="grid-item">
@@ -182,6 +189,7 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/Final%20Positive%20Comments.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
@@ -200,7 +208,8 @@
                 expertise, educators find ways to contribute to their colleagues and to the profession.</p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="./images/Make%20It%20Matter%20Badge.jpg" alt="Make It Matter Badge">
             </div>
 
             <div class="grid-item">
@@ -221,7 +230,8 @@
                     expect during my time at school and what I could do to be a better teacher.</p>
             </div>
 
-            <div class="grid-item">
+            <div class="grid-item images">
+            <img src="./images/Portfolio%20Certificate.jpeg" alt="Portfolio Certificate">
             </div>
         </div>
 
@@ -242,7 +252,8 @@
                 to work to improve those that may be outdated or ineffective.</p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="./images/Letter%20of%20Recommendation.jpeg" alt="Letter Of Recommendation">
             </div>
 
             <div class="grid-item">
@@ -264,6 +275,7 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/Becca%20Maisey%20Third%20Toddler%20Lead%20Implementation%20Rubric.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
