--- a/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
@@ -25,11 +25,12 @@
 
         <h1>Instruction</h1>
         <div>
-            <h2 class="about"></h2>
+            <h2 class="about">3a. Communicating with Students</h2>
             <p class="about"></p>
         </div>
         <div class="grid-container">
             <div class="grid-item">
+                    <embed src="./files/Preschool%20Lesson%20Plan%2011.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
 
             <div class="grid-item">
@@ -42,6 +43,100 @@
             </div>
 
             <div class="grid-item">
+                    <embed src="./files/Toddler%20Strategy%20Sheet.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">3b. Using Questioning and Discussion Techniques</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+                    <embed src="./files/Lesson%20Plan%20-%203%20Math%20Intervention%20(subtracting%202%20digits%20from%203%20digits).pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item">
+                    <embed src="./files/TPT%20Project.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">3c. Engaging Students in Learning</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item images">
+                <img src="./images/Small%20Focus%20Activity.jpg" alt="Small Focus Activity">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item">
+                    <embed src="./files/Lesson Plan 16 Be verbs.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">3d. Using Assessment in Instruction</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+                    <embed src="./files/Preschool%20Lesson%20Pre-Assessment.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item images">
+                <img src="./images/Post-Assessment%20Key.jpeg" alt="Post Assessment Key 1"><br>
+                <img src="./images/Post-assessment%20Key%20pg%202.jpeg" alt="Post Assessment Key 2">
+            </div>
+        </div>
+
+        <div>
+            <h2 class="about">3e. Demonstrating Flexibility and Responsiveness</h2>
+            <p class="about"></p>
+        </div>
+        <div class="grid-container">
+            <div class="grid-item">
+                    <embed src="./files/Lesson%20Plan%2017%20-%20How%20to%20Collect%20and%20Graph%20Data.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+            </div>
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+
+            <div class="grid-item">
+                <p><strong>Document Description: </strong></p>
+            </div>
+
+            <div class="grid-item">
+                    <embed src="./files/Preschool%20Dogs%20Large%20Group.pdf" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
             </div>
         </div>
 
